[package]
name = "rust_bitmap_renderer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = { version = "8.0.0" }
image = { version = "0.24.7", features = [] }

native-windows-gui = { version = "1.0" }
native-windows-derive = { version = "1.0" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
windows-subsystem = "windows"

[package.metadata.cargo-binutils]
rustflags = ["-C", "link-args=-Wl,--subsystem,windows"]