[package]
name = "rust_bitmap_renderer"
version = "0.1.1"
authors = ["Archie★ <https://github.com/ArchieC0des/>"]
edition = "2021"
build = "build.rs"

[dependencies]
rust-embed = { version = "8.0.0" }
image = { version = "0.24.7", features = [] }

native-windows-gui = { version = "1.0" }
native-windows-derive = { version = "1.0" }

[build-dependencies]
embed-resource = "1.6.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
windows-subsystem = "windows"

[package.metadata.cargo-binutils]
rustflags = ["-C", "link-args=-Wl,--subsystem,windows"]
